trying to avoid overflow

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     height: 13em;
     width: 42em;
     overflow: hidden;
-    margin-left: 20em;
+    margin-left: 16em;
   }
   #content {
     overflow: hidden;
